--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,44 @@
 // Поместите параметры в этот файл, чтобы перезаписать параметры по умолчанию и пользовательские параметры.
 {
-    "files.associations": {
-        "stm32f4xx.h": "c",
-        "stm32f4_bf.h": "c",
-        "type_traits": "cpp",
-        "initializer_list": "cpp",
-        "cstdint": "cpp"
-    },
+   "files.associations": {
+      "stm32f4xx.h": "c",
+      "stm32f4_bf.h": "c",
+      "type_traits": "cpp",
+      "initializer_list": "cpp",
+      "cstdint": "cpp",
+      "array": "cpp",
+      "chrono": "cpp",
+      "ratio": "cpp",
+      "*.ipp": "cpp",
+      "typeinfo": "cpp",
+      "cctype": "cpp",
+      "clocale": "cpp",
+      "cmath": "cpp",
+      "csignal": "cpp",
+      "cstdarg": "cpp",
+      "cstddef": "cpp",
+      "cstdio": "cpp",
+      "cstdlib": "cpp",
+      "cstring": "cpp",
+      "ctime": "cpp",
+      "cwchar": "cpp",
+      "cwctype": "cpp",
+      "atomic": "cpp",
+      "*.tcc": "cpp",
+      "condition_variable": "cpp",
+      "exception": "cpp",
+      "slist": "cpp",
+      "functional": "cpp",
+      "iosfwd": "cpp",
+      "limits": "cpp",
+      "mutex": "cpp",
+      "new": "cpp",
+      "stdexcept": "cpp",
+      "system_error": "cpp",
+      "thread": "cpp",
+      "tuple": "cpp",
+      "utility": "cpp"
+   },
 	// Compiler options for C (e.g. ["-std=c99"])
 	"clang.cflags": [
         "-I./inc/",
