--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,25 @@
 	
 	"version": "0.2.0",
 	"configurations": [
+		{
+			"name": "test",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/tests/build/ADC_F4",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${workspaceFolder}",
+			"environment": [],
+			"externalConsole": true,
+			"MIMode": "gdb",
+			"setupCommands": [
+				 {
+					  "description": "Enable pretty-printing for gdb",
+					  "text": "-enable-pretty-printing",
+					  "ignoreFailures": true
+				 }
+			]
+		},
 		{ 
 			"name": "(gdb) Attach",
 			"type": "cppdbg",
