--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,7 +42,16 @@
     "cinttypes": "cpp",
     "typeindex": "cpp",
     "future": "cpp",
-    "deque": "cpp"
+    "deque": "cpp",
+    "codecvt": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "fstream": "cpp",
+    "istream": "cpp",
+    "ostream": "cpp",
+    "numeric": "cpp",
+    "sstream": "cpp",
+    "streambuf": "cpp"
 },
 	// Compiler options for C (e.g. ["-std=c99"])
 	"clang.cflags": [
