--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
     "ostream": "cpp",
     "numeric": "cpp",
     "sstream": "cpp",
-    "streambuf": "cpp"
+    "streambuf": "cpp",
+    "iostream": "cpp"
 },
 	// Compiler options for C (e.g. ["-std=c99"])
 	"clang.cflags": [
