--- a/tests/Makefile
+++ b/tests/Makefile
@@ -16,13 +16,17 @@ CPP_FLAGS_F0 += $(CPP_FLAGS) $(INCLUDES_F0)
 
 BUILD_DIR = build
 
-all: $(BUILD_DIR)
-	g++-7 adc_f0_t.cpp $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/adc_f0 -pthread
-	g++-7 adc_f4_t.cpp $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/adc_f4
+all: where_bild
+	g++-7 adc_f0_t.cpp   $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/adc_f0 -pthread
+	g++-7 adc_f4_t.cpp   $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/adc_f4
+	g++-7 flash_f0_t.cpp $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/flash_f0 -pthread
+	g++-7 flash_f4_t.cpp $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash_f4 -pthread
 
 	./$(BUILD_DIR)/adc_f0
 	./$(BUILD_DIR)/adc_f4
+	./$(BUILD_DIR)/flash_f0
+	./$(BUILD_DIR)/flash_f4
 
 
-$(BUILD_DIR):
-	mkdir $@
+where_bild:
+	mkdir $(BUILD_DIR)
