--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
 			"name": "test",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/tests/build/ADC_F0",
+			"program": "${workspaceFolder}/tests/build/flash_f0",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
