--- a/tests/Makefile
+++ b/tests/Makefile
@@ -16,17 +16,19 @@ CPP_FLAGS_F0 += $(CPP_FLAGS) $(INCLUDES_F0)
 
 BUILD_DIR = build
 
-all: where_bild
-	g++-7 adc_f0_t.cpp   $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/adc_f0 -pthread
-	g++-7 adc_f4_t.cpp   $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/adc_f4
-	g++-7 flash_f0_t.cpp $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/flash_f0 -pthread
-	g++-7 flash_f4_t.cpp $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash_f4 -pthread
+all: $(BUILD_DIR)
+	# g++-7 adc_f0_t.cpp   $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/adc_f0 -pthread
+	# g++-7 adc_f4_t.cpp   $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/adc_f4
+	# g++-7 flash_f0_t.cpp $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/flash_f0 -pthread
+	# g++-7 flash_f4_t.cpp $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash_f4 -pthread
+	g++-7 flash_t.cpp    $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash
 
-	./$(BUILD_DIR)/adc_f0
-	./$(BUILD_DIR)/adc_f4
-	./$(BUILD_DIR)/flash_f0
-	./$(BUILD_DIR)/flash_f4
+	# ./$(BUILD_DIR)/adc_f0
+	# ./$(BUILD_DIR)/adc_f4
+	# ./$(BUILD_DIR)/flash_f0
+	# ./$(BUILD_DIR)/flash_f4
+	./$(BUILD_DIR)/flash
 
 
-where_bild:
+$(BUILD_DIR):
 	mkdir $(BUILD_DIR)
