--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,12 @@
 	
 	"version": "0.2.0",
 	"configurations": [
+	
 		{
 			"name": "test",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/tests/build/flash",
+			"program": "${workspaceFolder}/tests/build/tim_f0",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
