--- a/tests/Makefile
+++ b/tests/Makefile
@@ -23,6 +23,7 @@ all: $(BUILD_DIR)
 	g++-7 flash_f4_t.cpp $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash_f4 -pthread
 	g++-7 flash_t.cpp    $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash
 	g++-7 tim_f0_t.cpp   $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/tim_f0_t
+	g++-7 tim_f4_t.cpp   $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/tim_f4_t
 
 	./$(BUILD_DIR)/adc_f0
 	./$(BUILD_DIR)/adc_f4
@@ -30,11 +31,12 @@ all: $(BUILD_DIR)
 	./$(BUILD_DIR)/flash_f4
 	./$(BUILD_DIR)/flash
 	./$(BUILD_DIR)/tim_f0
+	./$(BUILD_DIR)/tim_f4
 
 
 $(BUILD_DIR):
 	mkdir $(BUILD_DIR)
 
 current: $(BUILD_DIR)
-	g++-7 tim_f0_t.cpp    $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/tim_f0
-	./$(BUILD_DIR)/tim_f0
+	g++-7 tim_f4_t.cpp    $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/tim_f4
+	./$(BUILD_DIR)/tim_f4
