--- a/tests/Makefile
+++ b/tests/Makefile
@@ -24,6 +24,7 @@ all: $(BUILD_DIR)
 	g++-7 flash_t.cpp    $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash
 	g++-7 tim_f0_t.cpp   $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/tim_f0_t
 	g++-7 tim_f4_t.cpp   $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/tim_f4_t
+	g++-7 encoder_t.cpp  $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/encoder_t
 
 	./$(BUILD_DIR)/adc_f0
 	./$(BUILD_DIR)/adc_f4
@@ -32,11 +33,12 @@ all: $(BUILD_DIR)
 	./$(BUILD_DIR)/flash
 	./$(BUILD_DIR)/tim_f0
 	./$(BUILD_DIR)/tim_f4
+	./$(BUILD_DIR)/encoder_
 
 
 $(BUILD_DIR):
 	mkdir $(BUILD_DIR)
 
 current: $(BUILD_DIR)
-	g++-7 tim_f4_t.cpp    $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/tim_f4
-	./$(BUILD_DIR)/tim_f4
+	g++-7 encoder_t.cpp    $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/encoder_
+	./$(BUILD_DIR)/encoder_
