--- a/tests/Makefile
+++ b/tests/Makefile
@@ -17,26 +17,28 @@ CPP_FLAGS_F0 += $(CPP_FLAGS) $(INCLUDES_F0)
 BUILD_DIR = build
 
 all: $(BUILD_DIR)
-	g++-7 adc_f0_t.cpp   $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/adc_f0 -pthread
-	g++-7 adc_f4_t.cpp   $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/adc_f4
-	g++-7 flash_f0_t.cpp $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/flash_f0 -pthread
-	g++-7 flash_f4_t.cpp $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash_f4 -pthread
-	g++-7 flash_t.cpp    $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/flash
-	g++-7 tim_f0_t.cpp   $(CPP_FLAGS_F0) -o ./$(BUILD_DIR)/tim_f0_t
-	g++-7 tim_f4_t.cpp   $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/tim_f4_t
+	# g++-7 adc_f0_t.cpp   $(CPP_FLAGS_F0)  -o ./$(BUILD_DIR)/adc_f0 -pthread
+	# g++-7 adc_f4_t.cpp   $(CPP_FLAGS_F4)  -o ./$(BUILD_DIR)/adc_f4
+	g++-7 flash_f0_t.cpp $(CPP_FLAGS_F0)  -o ./$(BUILD_DIR)/flash_f0 -pthread
+	g++-7 flash_f4_t.cpp $(CPP_FLAGS_F4)  -o ./$(BUILD_DIR)/flash_f4 -pthread
+	g++-7 flash_t.cpp    $(CPP_FLAGS_F4)  -o ./$(BUILD_DIR)/flash
+	g++-7 tim_f0_t.cpp   $(CPP_FLAGS_F0)  -o ./$(BUILD_DIR)/tim_f0
+	g++-7 tim_f4_t.cpp   $(CPP_FLAGS_F4)  -o ./$(BUILD_DIR)/tim_f4
+	g++-7 meta_t.cpp     $(CPP_FLAGS)     -o ./$(BUILD_DIR)/meta
 
-	./$(BUILD_DIR)/adc_f0
-	./$(BUILD_DIR)/adc_f4
+	# ./$(BUILD_DIR)/adc_f0
+	# ./$(BUILD_DIR)/adc_f4
 	./$(BUILD_DIR)/flash_f0
 	./$(BUILD_DIR)/flash_f4
 	./$(BUILD_DIR)/flash
 	./$(BUILD_DIR)/tim_f0
 	./$(BUILD_DIR)/tim_f4
+	./$(BUILD_DIR)/meta
 
 
 $(BUILD_DIR):
 	mkdir $(BUILD_DIR)
 
 current: $(BUILD_DIR)
-	g++-7 tim_f4_t.cpp    $(CPP_FLAGS_F4) -o ./$(BUILD_DIR)/tim_f4
-	./$(BUILD_DIR)/tim_f4
+	g++-7 meta_t.cpp     $(CPP_FLAGS)     -o ./$(BUILD_DIR)/meta
+	./$(BUILD_DIR)/meta
